--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@fortawesome/fontawesome-free": "^6.4.0",
         "@popperjs/core": "^2.11.6",
         "bootstrap": "^5.2.2",
+        "chart.js": "^4.3.0",
         "luxon": "^3.3.0"
     }
 }
